--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "mobile-first",
     "build-tools"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/joshboyan/minimal-framework.git"  
+  },
   "author": "Josh Boyan",
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-coffee": "^2.3.2",
     "gulp-util": "^3.0.7"
   }
 }
