--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/joshboyan/minimal-framework.git"  
+    "url": "https://github.com/joshboyan/minimal-framework.git"
   },
   "author": "Josh Boyan",
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.2",
+    "gulp-concat": "^2.6.0",
     "gulp-util": "^3.0.7"
   }
 }
