--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   "author": "Josh Boyan",
   "license": "MIT",
   "devDependencies": {
+    "browser-sync": "2.14.0",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-coffee": "^2.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-sass": "^2.3.2",
+    "gulp-shell": "^0.5.2",
     "gulp-util": "^3.0.7"
   }
 }
