--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-sass": "^2.3.2",
     "gulp-shell": "^0.5.2",
+    "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7"
   }
 }
