--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-coffee": "^2.3.2",
     "gulp-concat": "^2.6.0",
+    "gulp-imagemin": "^3.0.3",
+    "gulp-minify-html": "^1.0.6",
     "gulp-sass": "^2.3.2",
     "gulp-shell": "^0.5.2",
     "gulp-uglify": "^2.0.0",
