--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
   "author": "Josh Boyan",
   "license": "MIT",
   "devDependencies": {
+    "babel-preset-es2015": "^6.16.0",
     "browser-sync": "2.14.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
-    "gulp-coffee": "^2.3.2",
+    "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-imagemin": "^3.0.3",
+    "gulp-jshint": "^2.0.1",
     "gulp-minify-html": "^1.0.6",
     "gulp-sass": "^2.3.2",
     "gulp-shell": "^0.5.2",
     "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.7"
+    "gulp-util": "^3.0.7",
+    "jshint": "^2.9.3",
+    "panini": "^1.3.0"
   }
 }
