--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "author": "Josh Boyan",
   "license": "MIT",
   "devDependencies": {
-    "babel-preset-es2015": "^6.16.0",
     "browser-sync": "2.14.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
@@ -26,9 +25,8 @@
     "gulp-jshint": "^2.0.1",
     "gulp-minify-html": "^1.0.6",
     "gulp-sass": "^2.3.2",
-    "gulp-shell": "^0.5.2",
+    "gulp-sitemap": "^4.2.0",
     "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.7",
     "jshint": "^2.9.3",
     "panini": "^1.3.0"
   }
