--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-inject": "^4.1.0",
     "gulp-jshint": "^2.0.1",
     "gulp-minify-html": "^1.0.6",
+    "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.3.2",
     "gulp-shell": "^0.5.2",
     "gulp-sitemap": "^4.2.0",
