--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "extends": "google"
   },
   "dependencies": {
-    "babel-preset-es2015": "^6.22.0"
+    "babel-preset-es2015": "^6.22.0",
+    "fetch-polyfill": "^0.8.2",
+    "whatwg-fetch": "^2.0.2"
   }
 }
