--- a/app/manifest.json
+++ b/app/manifest.json
@@ -26,5 +26,5 @@
   "start_url": "/index.html?homescreen=1",
   "display": "standalone",
   "background_color": "#3E4EB8",
-  "theme_color": "#2F3BA2"
+  "theme_color": "000000"
 }
