--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-sitemap": "^4.2.0",
     "gulp-uglify": "^2.0.0",
     "jshint": "^2.9.3",
-    "panini": "^1.3.0"
+    "panini": "^1.3.0",
+    "run-sequence": "^1.2.2"
   }
 }
