--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
+    "gulp-browserify": "^0.5.1",
     "gulp-cli": "^1.2.2",
     "gulp-concat": "^2.6.0",
     "gulp-imagemin": "^3.0.3",
@@ -31,9 +32,12 @@
     "gulp-sass": "^2.3.2",
     "gulp-shell": "^0.5.2",
     "gulp-sitemap": "^4.2.0",
+    "gulp-sourcemaps": "^2.4.1",
     "gulp-uglify": "^2.0.0",
     "jshint": "^2.9.3",
     "panini": "^1.3.0",
-    "run-sequence": "^1.2.2"
+    "run-sequence": "^1.2.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
