--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jshint": "^2.9.3",
     "panini": "^1.3.0",
     "run-sequence": "^1.2.2",
+    "sw-precache": "^5.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
