--- a/package.json
+++ b/package.json
@@ -41,5 +41,9 @@
     "sw-precache": "^5.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "idb": "^2.0.0",
+    "whatwg-fetch": "^2.0.3"
   }
 }
