Remove WebStarterKit files

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,10 @@
-.idea/*
-builds/dev/css/*
-builds/dev/js/*
-builds/dev/*.html
-builds/dist/css/*
-builds/dist/js/*
-builds/dist/img/**/*
-builds/dist/*.html
+idea/
+node_modules/
+builds/dev/
+builds/dist/css
+builds/dist/img
+builds/dist/js
+builds/dist/sw.js
+builds/dist/index.js
 builds/dist/sitemap.xml
-.DS_Store
-node_modules
-.tmp
-.sass-cache
-builds/**/img/*
+builds/dist/
