--- a/components/manifest.json
+++ b/components/manifest.json
@@ -8,24 +8,24 @@ homescreens to simulate native app experience
   "name": "SVG Weather",
   "short_name": "SVG Weather",
   "icons": [{
-        "src": "images/touch/icon-128x128.png",
+        "src": "img/icon-128x128.png",
         "sizes": "128x128",
         "type": "image/png"
       }, {
-        "src": "images/touch/apple-touch-icon.png",
+        "src": "img/apple-touch-icon.png",
         "sizes": "152x152",
         "type": "image/png"
       }, {
-        "src": "images/touch/ms-touch-icon-144x144.png",
+        "src": "img/ms-touch-icon-144x144.png",
         "sizes": "144x144",
         "type": "image/png"
       }, {
-        "src": "images/touch/chrome-touch-icon-192x192.png",
+        "src": "img/chrome-touch-icon-192x192.png",
         "sizes": "192x192",
         "type": "image/png"
       },
     {
-      "src": "images/touch/large-icon-252x252.png",
+      "src": "img/large-icon-252x252.png",
       "sizes": "252x252",
       "type": "image/png"
     }],
